After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747485 - pressing xf86-favorites consistantly crashes files
pressing xf86-favorites consistantly crashes files
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.16.x
Other Linux
: High critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-08 04:46 UTC by kendell clark
Modified: 2015-08-07 12:40 UTC
See Also:
GNOME target: ---
GNOME version: 3.15/3.16


Attachments
stack trace from abrt describing the nautilus crash (33.45 KB, text/plain)
2015-04-08 09:59 UTC, kendell clark
  Details
window: fix xf86-favorites shorcut (896 bytes, patch)
2015-04-08 12:47 UTC, Carlos Soriano
none Details | Review
window: fix xf86-favorites shortcut (897 bytes, patch)
2015-04-08 12:47 UTC, Carlos Soriano
committed Details | Review

Description kendell clark 2015-04-08 04:46:54 UTC
steps to reproduce. Open a files window in any folder. Press the xf86-favorites key on your keyboard if you have one. Expected results: Nautilus should display the bookmarks dialog for jumping to, adding, removing bookmarks. Actual results: After a few seconds, files crashes, often taking down gnome shell with it. This seems specific to 3.16, as I have a fedora 21 system with 3.14 and this does not happen there. I'll be glad to provide any additional info needed. In case it helps, my environment is as follows. Fedora 22 beta with gnome shell v3.16, nautilus v3.16.
Comment 1 André Klapper 2015-04-08 09:23:50 UTC
Thanks for taking the time to report this.
Without a stack trace from the crash it's very hard to determine what caused it.
Can you get us a stack trace? Please see https://wiki.gnome.org/Community/GettingInTouch/Bugzilla/GettingTraces for more information on how to do so. When pasting a stack trace in this bug report, please reset the status of this bug report from NEEDINFO to its previous status. Thanks in advance!
Comment 2 kendell clark 2015-04-08 09:55:33 UTC
stack trace coming. There seem to be only two status options available to me, needinfo and resolved.
Comment 3 kendell clark 2015-04-08 09:59:28 UTC
Created attachment 301116 [details]
stack trace from abrt describing the nautilus crash

sorry for the flood, I couldn't find the attachment link, then I accidentally changed the status to resolved
Comment 4 André Klapper 2015-04-08 10:24:14 UTC
Program terminated with signal SIGABRT, Aborted.

Thread 1 (Thread 0x7f0458841a00 (LWP 1794))

  • #0 __GI_raise
    at ../sysdeps/unix/sysv/linux/raise.c line 55
  • #1 __GI_abort
    at abort.c line 89
  • #2 g_assertion_message
  • #3 g_assertion_message_expr
    at gtestutils.c line 2371
  • #4 nautilus_window_key_press_event
    at nautilus-window.c line 2299
  • #5 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #6 _g_closure_invoke_va
    at gclosure.c line 831
  • #7 g_signal_emit_valist
    at gsignal.c line 3214
  • #8 g_signal_emit
    at gsignal.c line 3361
  • #9 gtk_widget_event_internal
    at gtkwidget.c line 7787
  • #10 propagate_event
    at gtkmain.c line 2515
  • #11 gtk_main_do_event
    at gtkmain.c line 1756
  • #12 gdk_event_source_dispatch
    at gdkeventsource.c line 364
  • #13 g_main_context_dispatch
    at gmain.c line 3122
  • #14 g_main_context_dispatch
    at gmain.c line 3737
  • #15 g_main_context_iterate
    at gmain.c line 3808
  • #16 g_main_context_iteration
    at gmain.c line 3869
  • #17 g_application_run
    at gapplication.c line 2308
  • #18 main
    at nautilus-main.c line 103

(*): Shared library is missing debugging information.
$1 = 0x0
$2 = 0x1315d60 "ERROR:nautilus-window.c:2299:nautilus_window_key_press_event: assertion failed: (action != NULL)"
Comment 5 Carlos Soriano 2015-04-08 12:47:20 UTC
Created attachment 301130 [details] [review]
window: fix xf86-favorites shorcut

It was using the previous action name before the gaction port
Comment 6 Carlos Soriano 2015-04-08 12:47:53 UTC
Created attachment 301131 [details] [review]
window: fix xf86-favorites shortcut

It was using the previous action name before the gaction port
Comment 7 Carlos Soriano 2015-04-08 12:49:53 UTC
Attachment 301131 [details] pushed as 1b51312 - window: fix xf86-favorites shortcut
Comment 8 kendell clark 2015-08-06 06:07:30 UTC
this still seems to be occuring using nautilus 3.16.2. Testede in fedora 22 and arch linux. I haven't changed the status just in case I'm wrong
Comment 9 Carlos Soriano 2015-08-07 12:40:06 UTC
It's fixed in 3.18