window: fix xf86-favorites shortcut

It was using the previous action name before the gaction port

https://bugzilla.gnome.org/show_bug.cgi?id=747485